打包文件名修改

--- a/使用说明.md
+++ b/使用说明.md
@@ -19,7 +19,7 @@
 ```javascript
   console.log(`引入格式:import '自定义名称一般用(webpack.config.js中output.library的名称)',{'工具函数中导出的名字'} from '包名称';\n
   <srcipt src='路径'></script>\n
-  例:import BIMEngine,{BIMEngine} from 'dist'`);
+  例:import BIMEngine,{BIMEngine} from 'build'`);
 ```
 
 ### 2.文件说明
